--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,56 +6,84 @@
 #
 cmake_minimum_required(VERSION 3.16...3.22)
 
-project(Boost.DI LANGUAGES CXX)
-set(CXX_STANDARD 20 CACHE STRING "C++ Standard Version. [14|17|20]")
-
-add_library(${PROJECT_NAME} INTERFACE)
-target_include_directories(
-        ${PROJECT_NAME} INTERFACE
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_CURRENT_SOURCE_DIR}/extension/include
+project(
+  DI
+  VERSION 1.2.1
+  LANGUAGES CXX
 )
 
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
-    set(COMPILER_SPECIFIC_CXX_STANDARD "-std=c++${CXX_STANDARD}")
-    string(REPLACE "14" "1y" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
-    string(REPLACE "17" "1z" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
-    string(REPLACE "20" "2a" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})    
+if(NOT DEFINED CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD
+      17
+      CACHE STRING "Default value for CXX_STANDARD property of targets."
+  )
+  option(CMAKE_CXX_STANDARD_REQUIRED
+         "Default value for CXX_STANDARD_REQUIRED property of targets." YES
+  )
+  option(CMAKE_CXX_EXTENSIONS
+         "Default value for CXX_EXTENSIONS property of targets." NO
+  )
+endif()
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_SPECIFIC_CXX_STANDARD} -Wpedantic -Wall -Wextra -Werror")
+add_library(${PROJECT_NAME} INTERFACE)
+set(INCLUDE_INSTALL_DIR include/${PROJECT_NAME}-${PROJECT_VERSION}/include)
+target_include_directories(${PROJECT_NAME} INTERFACE
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/extension/include>
+    $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>)
+#XXX target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/extension/include)
 
-elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL Clang OR ${CMAKE_CXX_COMPILER_ID} STREQUAL AppleClang)
-    set(COMPILER_SPECIFIC_CXX_STANDARD "-std=c++${CXX_STANDARD}")
-    string(REPLACE "14" "1y" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
-    string(REPLACE "17" "1z" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
-    string(REPLACE "20" "2a" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})    
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_SPECIFIC_CXX_STANDARD} -Wpedantic -Wall -Wextra -Werror")
-    
-elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-    set(COMPILER_SPECIFIC_CXX_STANDARD "/std:c++${CXX_STANDARD}")
-    string(REPLACE "20" "latest" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
+if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+  set(COMPILER_SPECIFIC_CXX_STANDARD "/std:c++${CXX_STANDARD}")
+  string(REPLACE "20" "latest" COMPILER_SPECIFIC_CXX_STANDARD
+                 ${COMPILER_SPECIFIC_CXX_STANDARD}
+  )
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_SPECIFIC_CXX_STANDARD} /W3 /EHsc /Zc:__cplusplus")
-
-else()
-    message(WARNING "Unsupported compiler!")
+  set(CMAKE_CXX_FLAGS
+      "${CMAKE_CXX_FLAGS} ${COMPILER_SPECIFIC_CXX_STANDARD} /W3 /EHsc /Zc:__cplusplus"
+  )
 endif()
 
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-    set(IS_TOPLEVEL_PROJECT TRUE)
+  set(IS_TOPLEVEL_PROJECT TRUE)
 else()
-    set(IS_TOPLEVEL_PROJECT FALSE)
+  set(IS_TOPLEVEL_PROJECT FALSE)
 endif()
 
-option(BOOST_DI_OPT_BUILD_TESTS "Build and perform Boost.DI tests" ${IS_TOPLEVEL_PROJECT})
+include(cmake/CPM.cmake)
+include(cmake/WarningsAsErrors.cmake)
+
+# PackageProject.cmake will be used to make our target installable
+CPMAddPackage(
+  NAME PackageProject.cmake
+  GITHUB_REPOSITORY TheLartians/PackageProject.cmake
+  VERSION 1.6.0
+)
+
+# Create target Boost::DI and install target
+packageProject(
+  NAME ${PROJECT_NAME}
+  VERSION ${PROJECT_VERSION}
+  NAMESPACE Boost
+  BINARY_DIR ${PROJECT_BINARY_DIR}
+  INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include
+  INCLUDE_DESTINATION ${INCLUDE_INSTALL_DIR}
+  COMPATIBILITY SameMajorVersion
+)
+
+option(BOOST_DI_OPT_BUILD_TESTS "Build and perform Boost.DI tests"
+       ${IS_TOPLEVEL_PROJECT}
+)
 if(BOOST_DI_OPT_BUILD_TESTS)
-    enable_testing()
-    add_subdirectory(extension/test)
-    add_subdirectory(test)
+  enable_testing()
+  add_subdirectory(extension/test)
+  add_subdirectory(test)
 endif()
 
-option(BOOST_DI_OPT_BUILD_EXAMPLES "Build perform Boost.DI examples" ${IS_TOPLEVEL_PROJECT})
+option(BOOST_DI_OPT_BUILD_EXAMPLES "Build perform Boost.DI examples"
+       ${IS_TOPLEVEL_PROJECT}
+)
 if(BOOST_DI_OPT_BUILD_EXAMPLES)
-    add_subdirectory(example)
+  add_subdirectory(example)
 endif()
