--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -8,7 +8,8 @@ function(example example)
     string(REPLACE "/" "_" tmp ${example})
     set(EXAMPLE_NAME example.${tmp})
     add_executable(${EXAMPLE_NAME} ${CMAKE_CURRENT_LIST_DIR}/${example}.cpp)
-    target_link_libraries(${EXAMPLE_NAME} PRIVATE Boost.DI)
+    target_include_directories(${EXAMPLE_NAME} SYSTEM PRIVATE ${PROJECT_SOURCE_DIR}/include)
+    target_link_libraries(${EXAMPLE_NAME} PRIVATE Boost::DI)
     add_test(${EXAMPLE_NAME} ${EXAMPLE_NAME})
 endfunction()
 
