--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on: [push, pull_request]
 env:
   CTEST_OUTPUT_ON_FAILURE: 1
   CPM_SOURCE_CACHE: ${{ github.workspace }}/cpm_modules
+  # CHECKS: -checks='-*,modernize-*,misc-*,bugprone-*,hicpp-*,cert-*,readability-*,portability-*,performance-*'
 
 jobs:
   test:
@@ -56,7 +57,7 @@ jobs:
       - name: BuildWithInstalledVersion
         shell: bash
         run: |
-          cmake -S examples -B build/test -D CMAKE_PREFIX_PATH=$PWD/stage -D CMAKE_EXPORT_COMPILE_COMMANDS=1
+          cmake -S example -B build/test -D CMAKE_PREFIX_PATH=$PWD/stage -D CMAKE_EXPORT_COMPILE_COMMANDS=1
           cmake --build build/test --config Release -j 4
 
       - name: TestWithInstalledVersion
@@ -69,11 +70,11 @@ jobs:
         run: |
           export PATH=/usr/local/opt/llvm/bin/:${PATH}
           perl -i.bak -pe 's#-I($CPM_SOURCE_CACHE)#-isystem $1#g' build/test/compile_commands.json
-          run-clang-tidy -p build/test examples
+          run-clang-tidy -p build/test ${CHECKS} example
 
       - name: Run clang-tidy on Ubuntu Host
         if: startsWith(matrix.os, 'ubuntu')
         shell: bash
         run: |
           perl -i.bak -pe 's#-I($CPM_SOURCE_CACHE)#-isystem $1#g' build/test/compile_commands.json
-          run-clang-tidy-12 -p build/test examples
+          run-clang-tidy-12 -p build/test ${CHECKS} example
