--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -8,6 +8,7 @@ option(TEST_INSTALLED_VERSION "Test the version found by find_package" OFF)
 if(TEST_INSTALLED_VERSION)
     cmake_minimum_required(VERSION 3.16...3.22)
     project(example LANGUAGES CXX)
+    set(CMAKE_CXX_STANDARD 14 CACHE STRING "C++ Standard Version. [14|17|20]")
     find_package(DI 1.2 CONFIG REQUIRED)
     enable_testing()
 endif()
