use target_compile_features() to export the required cxx_std

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,8 @@ target_include_directories(${PROJECT_NAME} INTERFACE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/extension/include>
   $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>)
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD ${CMAKE_CXX_STANDARD})
+# NOTE: this will not exported! set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD ${CMAKE_CXX_STANDARD})
+target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_${CMAKE_CXX_STANDARD})
 
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
   # XXX set(COMPILER_SPECIFIC_CXX_STANDARD "/std:c++${CXX_STANDARD}")
