Install the extensions header files for external use

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,9 @@ packageProject(
   COMPATIBILITY SameMajorVersion
 )
 
+install(DIRECTORY extension/include/
+  DESTINATION ${INCLUDE_INSTALL_DIR})
+
 option(BOOST_DI_OPT_BUILD_TESTS "Build and perform Boost::DI tests" ${IS_TOPLEVEL_PROJECT})
 if(BOOST_DI_OPT_BUILD_TESTS)
   enable_testing()
