--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -6,20 +6,23 @@
 
 option(TEST_INSTALLED_VERSION "Test the version found by find_package" OFF)
 if(TEST_INSTALLED_VERSION)
-    cmake_minimum_required(VERSION 3.16...3.22)
-    project(example LANGUAGES CXX)
-    set(CMAKE_CXX_STANDARD 14 CACHE STRING "C++ Standard Version. [14|17|20]")
-    find_package(DI 1.2 CONFIG REQUIRED)
-    enable_testing()
+  cmake_minimum_required(VERSION 3.16...3.22)
+  project(example LANGUAGES CXX)
+  set(CMAKE_CXX_STANDARD
+      14
+      CACHE STRING "C++ Standard Version. [14|17|20]"
+  )
+  find_package(DI 1.2 CONFIG REQUIRED)
+  enable_testing()
 endif()
 
 function(example example)
-    string(REPLACE "/" "_" tmp ${example})
-    set(EXAMPLE_NAME example.${tmp})
-    add_executable(${EXAMPLE_NAME} ${CMAKE_CURRENT_LIST_DIR}/${example}.cpp)
-    target_include_directories(${EXAMPLE_NAME} SYSTEM PRIVATE ${PROJECT_SOURCE_DIR}/include)
-    target_link_libraries(${EXAMPLE_NAME} PRIVATE Boost::DI)
-    add_test(${EXAMPLE_NAME} ${EXAMPLE_NAME})
+  string(REPLACE "/" "_" tmp ${example})
+  set(EXAMPLE_NAME example.${tmp})
+  add_executable(${EXAMPLE_NAME} ${CMAKE_CURRENT_LIST_DIR}/${example}.cpp)
+  target_include_directories(${EXAMPLE_NAME} SYSTEM PRIVATE ${PROJECT_SOURCE_DIR}/include)
+  target_link_libraries(${EXAMPLE_NAME} PRIVATE Boost::DI)
+  add_test(${EXAMPLE_NAME} ${EXAMPLE_NAME})
 endfunction()
 
 include_directories(..)
