--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,7 @@ function(test test)
   set(TEST_NAME test.${tmp})
   add_executable(${TEST_NAME} ${CMAKE_CURRENT_LIST_DIR}/${test}.cpp)
   target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
-  target_include_directories(${TEST_NAME} SYSTEM PRIVATE ${PROJECT_SOURCE_DIR}/include)
+  #XXX target_include_directories(${TEST_NAME} SYSTEM PRIVATE ${CMAKE_SOURCE_DIR}/include)
   target_link_libraries(${TEST_NAME} PRIVATE Boost::DI)
   add_test(${TEST_NAME} ${TEST_NAME})
 endfunction()
