if typo in cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,13 +51,13 @@ if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
 endif()
 
 if("${CMAKE_PROJECT_NAME}" STREQUAL "${PROJECT_NAME}")
-  set(IS_TOPLEVEL_PROJECT TRUE)
-  option(WarningsAsErrors "Be really pedantic!" YES)
+  set(PROJECT_IS_TOP_LEVEL TRUE)
+  option(WarningsAsErrors "Be really pedantic!" NO)
   if(WarningsAsErrors)
     include(cmake/WarningsAsErrors.cmake)
   endif()
 else()
-  set(IS_TOPLEVEL_PROJECT FALSE)
+  set(PROJECT_IS_TOP_LEVEL FALSE)
 endif()
 
 include(cmake/CPM.cmake)
